<resources>
    <string name="app_name">EKart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texture_left">texture_left</string>
    <string name="texture_right">texture_right</string>
    <string name="the_right_address_n_for_shopping_n_any_day">The Right Address\n For Shopping\n Any day</string>
    <string name="it_is_now_very_easy_to_reach_the_nbest_quality_among_all_nthe_products_on_the_internet">It is now very easy to reach the\nbest quality among all\nthe products on the internet.</string>
    <string name="start">Start</string>
    <string name="ellipse">ellipse</string>
    <string name="bg_image">bg_image</string>
    <string name="ekart">EKart</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="let_s_register">Let\'s Register</string>

    <string name="rightAddress">The Right Address\n For Shopping\n Anyday</string>
    <string name="quality">It is now very easy to reach the\nbest quality among all\nthe products on the internet.</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="do_you_have_an_account_login">Do you have an account? login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="todo">TODO</string>
    <string name="or_login">Or \n Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email">We will send you the password reset link to your email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search_now">Search Now</string>
    <string name="see_product">See product</string>
    <string name="best_deal">Best deal</string>
    <string name="best_products">Best Products</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="check_out">Check Out</string>
    <string name="your_shopping_cart_is_empty">Your Shopping Cart is Empty</string>
    <string name="product_name">Product Name</string>
    <string name="cupboard">Cupboard</string>
    <string name="product_price">₹ 10000.0</string>
    <string name="product_price_rv">₹ %1$s</string>
    <string name="product_description">Product Description</string>
    <string name="colors">Colors</string>
    <string name="sizes">Sizes</string>
    <string name="medium">medium</string>
    <string name="discover_more">Discover More</string>
    <string name="electronics">Electronics</string>
    <string name="chair">chair</string>
    <string name="furniture">furniture</string>
    <string name="oop_not_found">Oop ! Not Found</string>
    <string name="total">Total</string>
    <string name="quantity">Quantity</string>
    <string name="change">Change</string>
    <string name="qty_1">Qty : 1</string>
    <string name="_1">1</string>
    <string name="no_item_in_yout_cart">No Item In Yout Cart</string>
    <string name="hc">HC</string>
    <string name="name">Name</string>
    <string name="chauhanhiren_gmail_com">chauhanhiren@gmail.com</string>
    <string name="orders">Orders</string>
    <string name="all_orders">All Orders</string>
    <string name="track_orders">Track Orders</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="logout">Logout</string>
    <string name="forget_change_password">Forget/Change Password</string>
    <string name="save">Save</string>
    <string name="set_username">%1$s %2$s</string>
    <string name="user_name_initiate">%1$s%2$s</string>
    <string name="payments_methods">Payment Methods</string>
    <string name="furnikart_dose_not_support_virtual_payments_you_can_pay_when_you_receive_your_order">Furnikart dose not support virtual payments. You can pay when you receive your order.</string>
    <string name="shopping_address">Shopping Address</string>
    <string name="place_order">Place Order</string>
    <string name="address_location_ex_home">Address Location Ex: Home</string>
    <string name="full_name">Full Name</string>
    <string name="street">Street</string>
    <string name="pincode">PinCode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="order_id">Order Id</string>
    <string name="order_date">Order Date</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="products">Products</string>
    <string name="_0">₹ 0</string>
    <string name="already_added">Already Added</string>
    <string name="this_item_is_already_added">This item is already added</string>
    <string name="firstName_lastName">%1$s %2$s</string>
    <string name="firstName_lastName_first_char">%1$s%2$s</string>
    <string name="title">title</string>
</resources>